# simulador-orbital

./: CMakeLists.txt  README.MD
include/: astro.hpp  camera.hpp  colors.hpp  main.hpp  space.hpp
src/: astro.cpp  camera.cpp  colors.cpp  main.cpp  space.cpp
